@@ -1,4 +1,4 @@
->$NetBSD: CHANGES-2006,v 1.1287 2006/09/15 13:01:54 joerg Exp $
+>$NetBSD: CHANGES-2006,v 1.1288 2006/09/15 13:56:54 ghen Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -4321,3 +4321,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated www/firefox-gtk1 to 1.5.0.7 [ghen 2006-09-15]
 	Updated mail/thunderbird to 1.5.0.7 [ghen 2006-09-15]
 	Updated mail/thunderbird-gtk1 to 1.5.0.7 [ghen 2006-09-15]
+	Updated devel/cpuflags to 1.02 [abs 2006-09-15]
